--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -157,6 +157,7 @@
     "keystoreWarningCards.saveMyKeystoreFile": "Save This Keystore File!",
     "keystoreWarningCards.secureIt": "Secure it like the millions of dollars it may one day be worth.",
     "keystoreWarningCards.yourFundsWillBeStolen": "Your funds will be stolen if you use this file on a malicious phishing site.",
+    "modalAccessAccount.title": "Access Another Account",
     "modalAccessByHardware.chooseAHardware": "Continue",
     "modalAccessByHardware.ledgerChromeOnly": "Ledger devices require the Chrome browser.",
     "modalAccessByHardware.ledgerInstructions": "Unlock your Ledger wallet and open the Hedera™ Hashgraph app now.",
