Add skeleton and some functionality for hedera-ethereum bridge

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -262,6 +262,10 @@
     "interfaceSignMessage.includeYourNickname": "Include your nickname and where you use the nickname so someone else cannot use it. Include a specific reason for the message so it cannot be reused for a different purpose.",
     "interfaceSendTransfer.transferAmount": "Transfer Amount",
     "interfaceSendTransfer.title": "Send",
+    "interfaceWrapHbar.title": "Wrap Hbar to WHbar",
+    "interfaceWrapHbar.wrapHbar": "Wrap Hbar | Wrap {count} Hbar | Wrap {count} Hbars",
+    "interfaceUnwrapWHbar.title": "Unwrap WHbar to Hbar",
+    "interfaceUnwrapWHbar.unwrapWHbar": "Unwrap WHbar | Unwrap {count} WHbar | Unwrap {count} WHbars",
     "transferList.transfers": "Transfers",
     "interfaceSendTransfer.sendHbar": "Send Hbar | Send {count} Hbar | Send {count} Hbars",
     "interfaceSendTransfer.feeSummary.dismiss": "Cancel",
@@ -279,6 +283,9 @@
     "interfaceNavigation.sendToken": "Send Tokens",
     "interfaceNavigation.sendMultiple": "Send Hbar & Tokens",
     "interfaceNavigation.tools": "Tools",
+    "interfaceNavigation.hederaEthereumBridge": "Hedera-Eth Bridge",
+    "interfaceNavigation.wrapHbar": "Wrap Hbar",
+    "interfaceNavigation.unwrapWHbar": "Unwrap WHbar",
     "interfaceNavigation.files": "Files",
     "interfaceNavigation.downloadFile": "Download File",
     "interfaceNavigation.deployContract": "Deploy Contract",
@@ -375,6 +382,7 @@
     "common.message": "Message",
     "common.menu": "Menu",
     "common.memo": "Memo",
+    "common.gasPrice": "Gas Price",
     "common.logout": "Logout",
     "common.interface": "Interface",
     "common.idTooBig": "ID out of range",
@@ -418,6 +426,7 @@
     "common.change": "Change",
     "common.cancel": "Cancel",
     "common.amount": "Amount",
+    "common.ethAddress": "ETH Address to receive WHbar",
     "common.accountSyntax": "shard.realm.account or account",
     "common.accessMyAccount": "Access My Account",
     "common.about": "About",
