feat(hedera-eth-bridge): wrap confirm modal
* subscribe for tx event only once
* display all necessary amounts in modal

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -262,8 +262,12 @@
     "interfaceSignMessage.includeYourNickname": "Include your nickname and where you use the nickname so someone else cannot use it. Include a specific reason for the message so it cannot be reused for a different purpose.",
     "interfaceSendTransfer.transferAmount": "Transfer Amount",
     "interfaceSendTransfer.title": "Send",
+    "interfaceWrapHbar.hederaNetworkFee": "Hedera Network Fee",
+    "interfaceWrapHbar.ethereumNetworkFee": "Ethereum Network Fee",
+    "interfaceWrapHbar.bridgeServiceFee": "Bridge Service Fee",
     "interfaceWrapHbar.title": "Wrap Hbar to WHbar",
     "interfaceWrapHbar.wrapHbar": "Wrap Hbar | Wrap {count} Hbar | Wrap {count} Hbars",
+    "interfaceWrapHbar.wrapWaitEthTx": "If you would like to wait for your Ethereum Transaction, do not close this window.",
     "interfaceUnwrapWHbar.title": "Unwrap WHbar to Hbar",
     "interfaceUnwrapWHbar.unwrapWHbar": "Unwrap WHbar | Unwrap {count} WHbar | Unwrap {count} WHbars",
     "interfaceUnwrapWHbar.userDeniedAccess": "User denied account access!",
@@ -285,7 +289,7 @@
     "interfaceNavigation.sendToken": "Send Tokens",
     "interfaceNavigation.sendMultiple": "Send Hbar & Tokens",
     "interfaceNavigation.tools": "Tools",
-    "interfaceNavigation.hederaEthereumBridge": "Hedera-Eth Bridge",
+    "interfaceNavigation.hederaEthereumBridge": "Hedera-Ethereum Bridge",
     "interfaceNavigation.wrapHbar": "Wrap Hbar",
     "interfaceNavigation.unwrapWHbar": "Unwrap WHbar",
     "interfaceNavigation.files": "Files",
