feat(hedera-eth-bridge): unwrap confirm modal

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -187,6 +187,7 @@
     "modalFeeSummaryTitle.sendingToAccount": "Sending {0} ℏ to account {1}",
     "modalFeeSummaryTitle.downloadFile": "Downloading file: {0}",
     "modalFeeSummaryTitle.creatingAccountWithBalance": "Creating account with a balance of {0} ℏ",
+    "modalFeeSummaryTitle.unwrapHbar": "Unwrapping {0} WHBAR to account {1}",
     "modalFeeSummary.whatIsOperator": "The Hedera™ account that will pay the fees associated with this transaction",
     "modalFeeSummary.whatIsFee": "The estimated transaction fee that will be charged by the Hedera™ public network for this transaction",
     "modalFeeSummary.title": "Transaction Summary",
@@ -272,6 +273,7 @@
     "interfaceUnwrapWHbar.unwrapWHbar": "Unwrap WHbar | Unwrap {count} WHbar | Unwrap {count} WHbars",
     "interfaceUnwrapWHbar.userDeniedAccess": "User denied account access!",
     "interfaceUnwrapWHbar.noWeb3Provider": "No Web3 Provider! Please install Metamask!",
+    "interfaceUnwrapWHBar.invalidChainId": "Invalid selected Metamask chain! It should be {network}!",
     "transferList.transfers": "Transfers",
     "interfaceSendTransfer.sendHbar": "Send Hbar | Send {count} Hbar | Send {count} Hbars",
     "interfaceSendTransfer.feeSummary.dismiss": "Cancel",
