--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -158,6 +158,7 @@
     "modalSuccess.createdAccount": "Created account {0} with {1} ℏ",
     "modalSuccess.copiedFileID": "Copied File ID",
     "modalSuccess.copiedAccountID": "Copied Account ID",
+    "modalSuccess.wrapHbar": "Sending {0} WHBAR to Ethereum Address {1}",
     "modalRequestToCreateAccount.title": "Request to Create Account",
     "modalRequestToCreateAccount.theyMustCreateAndFundYourAccount": "They must create and fund your account, then provide you with your new account ID.",
     "modalRequestToCreateAccount.provideYourPublicKey": "Provide your public key (this QR code or the copied text) to an existing account owner on the Hedera™ network.",
@@ -187,6 +188,7 @@
     "modalFeeSummaryTitle.sendingToAccount": "Sending {0} ℏ to account {1}",
     "modalFeeSummaryTitle.downloadFile": "Downloading file: {0}",
     "modalFeeSummaryTitle.creatingAccountWithBalance": "Creating account with a balance of {0} ℏ",
+    "modalFeeSummaryTitle.wrapHbar": "Wrapping {0} ℏ to {1}",
     "modalFeeSummaryTitle.unwrapHbar": "Unwrapping {0} WHBAR to account {1}",
     "modalFeeSummary.whatIsOperator": "The Hedera™ account that will pay the fees associated with this transaction",
     "modalFeeSummary.whatIsFee": "The estimated transaction fee that will be charged by the Hedera™ public network for this transaction",
@@ -268,7 +270,7 @@
     "interfaceWrapHbar.bridgeServiceFee": "Bridge Service Fee",
     "interfaceWrapHbar.title": "Wrap Hbar to WHbar",
     "interfaceWrapHbar.wrapHbar": "Wrap Hbar | Wrap {count} Hbar | Wrap {count} Hbars",
-    "interfaceWrapHbar.wrapWaitEthTx": "If you would like to wait for your Ethereum Transaction, do not close this window.",
+    "interfaceWrapHbar.wrapWaitEthTx": "Waiting for Ethereum Transaction Hash, do not close this window.",
     "interfaceUnwrapWHbar.title": "Unwrap WHbar to Hbar",
     "interfaceUnwrapWHbar.unwrapWHbar": "Unwrap WHbar | Unwrap {count} WHbar | Unwrap {count} WHbars",
     "interfaceUnwrapWHbar.userDeniedAccess": "User denied account access!",
