feat(unwrap): introduce approve & burn modals

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -159,6 +159,7 @@
     "modalSuccess.copiedFileID": "Copied File ID",
     "modalSuccess.copiedAccountID": "Copied Account ID",
     "modalSuccess.wrapHbar": "Sending {0} WHBAR to Ethereum Address {1}",
+    "modalSuccess.unwrapHbar": "Initiated unwrap of {0} WHBAR",
     "modalRequestToCreateAccount.title": "Request to Create Account",
     "modalRequestToCreateAccount.theyMustCreateAndFundYourAccount": "They must create and fund your account, then provide you with your new account ID.",
     "modalRequestToCreateAccount.provideYourPublicKey": "Provide your public key (this QR code or the copied text) to an existing account owner on the Hedera™ network.",
@@ -189,6 +190,7 @@
     "modalFeeSummaryTitle.downloadFile": "Downloading file: {0}",
     "modalFeeSummaryTitle.creatingAccountWithBalance": "Creating account with a balance of {0} ℏ",
     "modalFeeSummaryTitle.wrapHbar": "Wrapping {0} ℏ to {1}",
+    "modalFeeSummaryTitle.approveWHbar": "Approve {0} WHBAR to Bridge {1}",
     "modalFeeSummaryTitle.unwrapHbar": "Unwrapping {0} WHBAR to account {1}",
     "modalFeeSummary.whatIsOperator": "The Hedera™ account that will pay the fees associated with this transaction",
     "modalFeeSummary.whatIsFee": "The estimated transaction fee that will be charged by the Hedera™ public network for this transaction",
@@ -272,6 +274,10 @@
     "interfaceWrapHbar.wrapHbar": "Wrap Hbar | Wrap {count} Hbar | Wrap {count} Hbars",
     "interfaceWrapHbar.wrapWaitEthTx": "Waiting for Ethereum Transaction Hash, do not close this window.",
     "interfaceUnwrapWHbar.title": "Unwrap WHbar to Hbar",
+    "interfaceUnwrapWHbar.approve.continue": "Approve",
+    "interfaceUnwrapWHbar.burn.continue": "Unwrap",
+    "interfaceUnwrapWHbar.approveAmount": "Approve amount",
+    "interfaceUnwrapWHbar.unwrapAmount": "Unwrap amount",
     "interfaceUnwrapWHbar.unwrapWHbar": "Unwrap WHbar | Unwrap {count} WHbar | Unwrap {count} WHbars",
     "interfaceUnwrapWHbar.userDeniedAccess": "User denied account access!",
     "interfaceUnwrapWHbar.noWeb3Provider": "No Web3 Provider! Please install Metamask!",
