wip: bridge tokens

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -189,9 +189,10 @@
     "modalFeeSummaryTitle.sendingToAccount": "Sending {0} ℏ to account {1}",
     "modalFeeSummaryTitle.downloadFile": "Downloading file: {0}",
     "modalFeeSummaryTitle.creatingAccountWithBalance": "Creating account with a balance of {0} ℏ",
-    "modalFeeSummaryTitle.wrapHbar": "Wrapping {0} ℏ to {1}",
+    "modalFeeSummaryTitle.wrapHbar": "Wrap {0} ℏ to {1}",
+    "modalFeeSummaryTitle.wrapToken": "Wrap {0} tokens to {1}",
     "modalFeeSummaryTitle.approveWHbar": "Approve {0} WHBAR to Bridge {1}",
-    "modalFeeSummaryTitle.unwrapHbar": "Unwrapping {0} WHBAR to account {1}",
+    "modalFeeSummaryTitle.unwrapHbar": "Unwrap {0} WHBAR to account {1}",
     "modalFeeSummary.whatIsOperator": "The Hedera™ account that will pay the fees associated with this transaction",
     "modalFeeSummary.whatIsFee": "The estimated transaction fee that will be charged by the Hedera™ public network for this transaction",
     "modalFeeSummary.title": "Transaction Summary",
@@ -270,10 +271,11 @@
     "interfaceWrapHbar.hederaNetworkFee": "Hedera Network Fee",
     "interfaceWrapHbar.ethereumNetworkFee": "Ethereum Network Fee",
     "interfaceWrapHbar.bridgeServiceFee": "Bridge Service Fee",
-    "interfaceWrapHbar.title": "Wrap Hbar to WHbar",
+    "interfaceWrapHbar.title": "Wrap to Ethereum",
     "interfaceWrapHbar.wrapHbar": "Wrap Hbar | Wrap {count} Hbar | Wrap {count} Hbars",
     "interfaceWrapHbar.wrapWaitEthTx": "Waiting for Ethereum Transaction Hash, do not close this window.",
-    "interfaceUnwrapWHbar.title": "Unwrap WHbar to Hbar",
+    "interfaceWrapToken.transferAmount": "Token Transfer Amount",
+    "interfaceUnwrapWHbar.title": "Unwrap from Ethereum",
     "interfaceUnwrapWHbar.approve.continue": "Approve",
     "interfaceUnwrapWHbar.burn.continue": "Unwrap",
     "interfaceUnwrapWHbar.approveAmount": "Approve amount",
@@ -442,7 +444,7 @@
     "common.change": "Change",
     "common.cancel": "Cancel",
     "common.amount": "Amount",
-    "common.ethAddress": "ETH Address to receive WHbar",
+    "common.ethAddress": "ETH Address to receive Wrapped Asset",
     "common.accountSyntax": "shard.realm.account or account",
     "common.accessMyAccount": "Access My Account",
     "common.about": "About",
