mock token transfer with hbar

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -158,7 +158,7 @@
     "modalSuccess.createdAccount": "Created account {0} with {1} ℏ",
     "modalSuccess.copiedFileID": "Copied File ID",
     "modalSuccess.copiedAccountID": "Copied Account ID",
-    "modalSuccess.wrapHbar": "Sending {0} WHBAR to Ethereum Address {1}",
+    "modalSuccess.wrapHbar": "Transferring {0} to Ethereum Address {1}",
     "modalSuccess.unwrapHbar": "Initiated unwrap of {0} WHBAR",
     "modalRequestToCreateAccount.title": "Request to Create Account",
     "modalRequestToCreateAccount.theyMustCreateAndFundYourAccount": "They must create and fund your account, then provide you with your new account ID.",
@@ -189,8 +189,8 @@
     "modalFeeSummaryTitle.sendingToAccount": "Sending {0} ℏ to account {1}",
     "modalFeeSummaryTitle.downloadFile": "Downloading file: {0}",
     "modalFeeSummaryTitle.creatingAccountWithBalance": "Creating account with a balance of {0} ℏ",
-    "modalFeeSummaryTitle.wrapHbar": "Wrap {0} ℏ to {1}",
-    "modalFeeSummaryTitle.wrapToken": "Wrap {0} tokens to {1}",
+    "modalFeeSummaryTitle.wrapHbar": "Transfer {0} ℏ to {1}",
+    "modalFeeSummaryTitle.wrapToken": "Transfer {0} tokens to {1}",
     "modalFeeSummaryTitle.approveWHbar": "Approve {0} WHBAR to Bridge {1}",
     "modalFeeSummaryTitle.unwrapHbar": "Unwrap {0} WHBAR to account {1}",
     "modalFeeSummary.whatIsOperator": "The Hedera™ account that will pay the fees associated with this transaction",
@@ -271,8 +271,8 @@
     "interfaceWrapHbar.hederaNetworkFee": "Hedera Network Fee",
     "interfaceWrapHbar.ethereumNetworkFee": "Ethereum Network Fee",
     "interfaceWrapHbar.bridgeServiceFee": "Bridge Service Fee",
-    "interfaceWrapHbar.title": "Wrap to Ethereum",
-    "interfaceWrapHbar.wrapHbar": "Wrap Hbar | Wrap {count} Hbar | Wrap {count} Hbars",
+    "interfaceWrapHbar.title": "Transfer to Ethereum",
+    "interfaceWrapHbar.wrapHbar": "Transfer | Transfer {count} | Transfer {count}",
     "interfaceWrapHbar.wrapWaitEthTx": "Waiting for Ethereum Transaction Hash, do not close this window.",
     "interfaceWrapToken.transferAmount": "Token Transfer Amount",
     "interfaceUnwrapWHbar.title": "Unwrap from Ethereum",
@@ -302,8 +302,8 @@
     "interfaceNavigation.sendMultiple": "Send Hbar & Tokens",
     "interfaceNavigation.tools": "Tools",
     "interfaceNavigation.hederaEthereumBridge": "Hedera-Ethereum Bridge",
-    "interfaceNavigation.wrapHbar": "Wrap Hbar",
-    "interfaceNavigation.unwrapWHbar": "Unwrap WHbar",
+    "interfaceNavigation.wrapHbar": "Transfer to Ethereum",
+    "interfaceNavigation.unwrapWHbar": "Transfer to Hedera",
     "interfaceNavigation.files": "Files",
     "interfaceNavigation.downloadFile": "Download File",
     "interfaceNavigation.deployContract": "Deploy Contract",
