--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -271,11 +271,13 @@
     "interfaceWrapHbar.hederaNetworkFee": "Hedera Network Fee",
     "interfaceWrapHbar.ethereumNetworkFee": "Ethereum Network Fee",
     "interfaceWrapHbar.bridgeServiceFee": "Bridge Service Fee",
-    "interfaceWrapHbar.title": "Wrap to Ethereum",
+    "interfaceWrapHbar.title": "Transfer to Ethereum",
     "interfaceWrapHbar.wrapHbar": "Wrap Hbar | Wrap {count} Hbar | Wrap {count} Hbars",
     "interfaceWrapHbar.wrapWaitEthTx": "Waiting for Ethereum Transaction Hash, do not close this window.",
+    "interfaceWrapHbar.assetLabel": "Asset",
+    "interfaceWrapHbar.balanceLabel": "Balance:",
     "interfaceWrapToken.transferAmount": "Token Transfer Amount",
-    "interfaceUnwrapWHbar.title": "Unwrap from Ethereum",
+    "interfaceUnwrapWHbar.title": "Transfer to Hedera",
     "interfaceUnwrapWHbar.approve.continue": "Approve",
     "interfaceUnwrapWHbar.burn.continue": "Unwrap",
     "interfaceUnwrapWHbar.approveAmount": "Approve amount",
@@ -302,8 +304,8 @@
     "interfaceNavigation.sendMultiple": "Send Hbar & Tokens",
     "interfaceNavigation.tools": "Tools",
     "interfaceNavigation.hederaEthereumBridge": "Hedera-Ethereum Bridge",
-    "interfaceNavigation.wrapHbar": "Wrap Hbar",
-    "interfaceNavigation.unwrapWHbar": "Unwrap WHbar",
+    "interfaceNavigation.wrapHbar": "Transfer to Ethereum",
+    "interfaceNavigation.unwrapWHbar": "Transfer to Hedera",
     "interfaceNavigation.files": "Files",
     "interfaceNavigation.downloadFile": "Download File",
     "interfaceNavigation.deployContract": "Deploy Contract",
