From previous commit
Signed-off-by: radtonev <radtonev@gmail.com>

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -272,10 +272,24 @@
     "interfaceWrapHbar.ethereumNetworkFee": "Ethereum Network Fee",
     "interfaceWrapHbar.bridgeServiceFee": "Bridge Service Fee",
     "interfaceWrapHbar.title": "Transfer to Ethereum",
+    "interfaceWrapHbar.description": "From here you can send Hedera assets to Ethereum",
+    "interfaceWrapHbar.transferButton": "Transfer",
     "interfaceWrapHbar.wrapHbar": "Wrap Hbar | Wrap {count} Hbar | Wrap {count} Hbars",
     "interfaceWrapHbar.wrapWaitEthTx": "Waiting for Ethereum Transaction Hash, do not close this window.",
     "interfaceWrapHbar.assetLabel": "Asset",
     "interfaceWrapHbar.balanceLabel": "Balance:",
+    "interfaceWrapHbar.deposit": "Deposit",
+    "interfaceWrapHbar.transaction.list.title": "Transactions",
+    "interfaceWrapHbar.deposit.transaction": "View Deposit Transaction",
+    "interfaceWrapHbar.claim.transaction": "View Claim Transaction",
+    "interfaceWrapHbar.waitForDeposit":"Waiting for Deposit transaction…",
+    "interfaceWrapHbar.claim": "Claim",
+    "interfaceWrapHbar.summary": "Summary",
+    "interfaceWrapHbar.asset": "Asset",
+    "interfaceWrapHbar.receiver": "Receiver",
+    "interfaceWrapHbar.service.fee": "Service Fee",
+    "interfaceWrapHbar.hedera.fee": "Hedera network fee",
+    "interfaceWrapHbar.totalToReceive": "Total to receive:",
     "interfaceWrapToken.transferAmount": "Token Transfer Amount",
     "interfaceUnwrapWHbar.title": "Transfer to Hedera",
     "interfaceUnwrapWHbar.approve.continue": "Approve",
@@ -303,7 +317,7 @@
     "interfaceNavigation.sendToken": "Send Tokens",
     "interfaceNavigation.sendMultiple": "Send Hbar & Tokens",
     "interfaceNavigation.tools": "Tools",
-    "interfaceNavigation.hederaEthereumBridge": "Hedera-Ethereum Bridge",
+    "interfaceNavigation.hederaEthereumBridge": "Bridge",
     "interfaceNavigation.wrapHbar": "Transfer to Ethereum",
     "interfaceNavigation.unwrapWHbar": "Transfer to Hedera",
     "interfaceNavigation.files": "Files",
@@ -446,7 +460,7 @@
     "common.change": "Change",
     "common.cancel": "Cancel",
     "common.amount": "Amount",
-    "common.ethAddress": "ETH Address to receive Wrapped Asset",
+    "common.ethAddress": "Receiver",
     "common.accountSyntax": "shard.realm.account or account",
     "common.accessMyAccount": "Access My Account",
     "common.about": "About",
