--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -277,12 +277,16 @@
     "interfaceWrapHbar.wrapHbar": "Wrap Hbar | Wrap {count} Hbar | Wrap {count} Hbars",
     "interfaceWrapHbar.wrapWaitEthTx": "Waiting for Ethereum Transaction Hash, do not close this window.",
     "interfaceWrapHbar.assetLabel": "Asset",
+    "interfaceWrapHbar.assetInfo": "The selected asset to be transferred. Receiving address will get wrapped version of the asset on the Ethereum network.",
+    "interfaceWrapHbar.serviceFeeInfo": "Fee charged by the Bridge operators for reliably transfering the asset between the networks.",
+    "interfaceWrapHbar.hederaFeeInfo": "The network fee that will be paid for performing this operation.",
     "interfaceWrapHbar.balanceLabel": "Balance:",
     "interfaceWrapHbar.deposit": "Deposit",
     "interfaceWrapHbar.transaction.list.title": "Transactions",
     "interfaceWrapHbar.deposit.transaction": "View Deposit Transaction",
     "interfaceWrapHbar.claim.transaction": "View Claim Transaction",
     "interfaceWrapHbar.waitForDeposit":"Waiting for Deposit transaction…",
+    "interfaceWrapHbar.waitForConfirmations":"Waiting for Validator's confirmations...",  
     "interfaceWrapHbar.claim": "Claim",
     "interfaceWrapHbar.summary": "Summary",
     "interfaceWrapHbar.asset": "Asset",
