--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -284,9 +284,13 @@
     "interfaceWrapHbar.deposit": "Deposit",
     "interfaceWrapHbar.transaction.list.title": "Transactions",
     "interfaceWrapHbar.deposit.transaction": "View Deposit Transaction",
+    "interfaceWrapHbar.deposit.notice": "Deposit <strong>{amount} {asset}</strong> for transferring to Ethereum",
     "interfaceWrapHbar.claim.transaction": "View Claim Transaction",
-    "interfaceWrapHbar.waitForDeposit":"Waiting for Deposit transaction…",
-    "interfaceWrapHbar.waitForConfirmations":"Waiting for Validator's confirmations...",  
+    "interfaceWrapHbar.claim.metamaskConfirmation": "Waiting for MetaMask confirmation...",
+    "interfaceWrapHbar.claim.notice": "Claim your <strong>{amount} {asset}</strong> on Ethereum",
+    "interfaceWrapHbar.waitForClaim": "Waiting for Claim transaction to be mined...",
+    "interfaceWrapHbar.waitForDeposit": "Waiting for Deposit transaction to be mined...",
+    "interfaceWrapHbar.waitForConfirmations": "Waiting for Validator's confirmations...",
     "interfaceWrapHbar.claim": "Claim",
     "interfaceWrapHbar.summary": "Summary",
     "interfaceWrapHbar.asset": "Asset",
