Transfer to Hedera flow (in progress)
Signed-off-by: radtonev <radtonev@gmail.com>

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -272,6 +272,7 @@
     "interfaceWrapHbar.ethereumNetworkFee": "Ethereum Network Fee",
     "interfaceWrapHbar.bridgeServiceFee": "Bridge Service Fee",
     "interfaceWrapHbar.title": "Transfer to Ethereum",
+    "interfaceUnWrapHbar.title": "Transfer to Hedera",
     "interfaceWrapHbar.description": "From here you can send Hedera assets to Ethereum",
     "interfaceWrapHbar.transferButton": "Transfer",
     "interfaceWrapHbar.wrapHbar": "Wrap Hbar | Wrap {count} Hbar | Wrap {count} Hbars",
@@ -282,6 +283,7 @@
     "interfaceWrapHbar.hederaFeeInfo": "The network fee that will be paid for performing this operation.",
     "interfaceWrapHbar.balanceLabel": "Balance:",
     "interfaceWrapHbar.deposit": "Deposit",
+    "interfaceWrapHbar.approve": "Approve",
     "interfaceWrapHbar.transaction.list.title": "Transactions",
     "interfaceWrapHbar.deposit.transaction": "View Deposit Transaction",
     "interfaceWrapHbar.deposit.notice": "Deposit <strong>{amount} {asset}</strong> for transferring to Ethereum",
@@ -301,6 +303,7 @@
     "interfaceWrapHbar.totalToReceive": "Total to receive:",
     "interfaceWrapToken.transferAmount": "Token Transfer Amount",
     "interfaceUnwrapWHbar.title": "Transfer to Hedera",
+    "interfaceUnWrapHbar.deposit.notice": "Deposit <strong>{amount} {asset}</strong> for transferring to Hedera",
     "interfaceUnwrapWHbar.approve.continue": "Approve",
     "interfaceUnwrapWHbar.burn.continue": "Unwrap",
     "interfaceUnwrapWHbar.approveAmount": "Approve amount",
