feat(unwrap): permit functionality; refactor: remove unused code
Signed-off-by: failfmi <oscurocalma@gmail.com>

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -279,7 +279,7 @@
     "interfaceWrapHbar.wrapWaitEthTx": "Waiting for Ethereum Transaction Hash, do not close this window.",
     "interfaceWrapHbar.assetLabel": "Asset",
     "interfaceWrapHbar.assetInfo": "The selected asset to be transferred. Receiving address will get wrapped version of the asset on the Ethereum network.",
-    "interfaceWrapHbar.serviceFeeInfo": "Fee charged by the Bridge operators for reliably transfering the asset between the networks.",
+    "interfaceWrapHbar.serviceFeeInfo": "Fee charged by the Bridge operators for reliably transferring the asset between the networks.",
     "interfaceWrapHbar.hederaFeeInfo": "The network fee that will be paid for performing this operation.",
     "interfaceWrapHbar.balanceLabel": "Balance:",
     "interfaceWrapHbar.deposit": "Deposit",
@@ -304,6 +304,7 @@
     "interfaceWrapToken.transferAmount": "Token Transfer Amount",
     "interfaceUnwrapWHbar.title": "Transfer to Hedera",
     "interfaceUnWrapHbar.deposit.notice": "Deposit <strong>{amount} {asset}</strong> for transferring to Hedera",
+    "interfaceUnwrapWHbar.assetInfo": "The selected asset to be transferred. Receiving address will get unwrapped version of the asset on the Hedera network.",
     "interfaceUnwrapWHbar.approve.continue": "Approve",
     "interfaceUnwrapWHbar.burn.continue": "Unwrap",
     "interfaceUnwrapWHbar.approveAmount": "Approve amount",
