feat(unwrap): add ethereum transaction; fix: rename labels

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -274,6 +274,7 @@
     "interfaceWrapHbar.title": "Transfer to Ethereum",
     "interfaceUnWrapHbar.title": "Transfer to Hedera",
     "interfaceWrapHbar.description": "From here you can send Hedera assets to Ethereum",
+    "interfaceUnWrapHbar.description": "From here you can send your assets back to Hedera",
     "interfaceWrapHbar.transferButton": "Transfer",
     "interfaceWrapHbar.wrapHbar": "Wrap Hbar | Wrap {count} Hbar | Wrap {count} Hbars",
     "interfaceWrapHbar.wrapWaitEthTx": "Waiting for Ethereum Transaction Hash, do not close this window.",
@@ -285,9 +286,9 @@
     "interfaceWrapHbar.deposit": "Deposit",
     "interfaceWrapHbar.approve": "Approve",
     "interfaceWrapHbar.transaction.list.title": "Transactions",
-    "interfaceWrapHbar.deposit.transaction": "View Deposit Transaction",
+    "interfaceWrapHbar.ethereum.transaction": "View Ethereum Transaction",
     "interfaceWrapHbar.deposit.notice": "Deposit <strong>{amount} {asset}</strong> for transferring to Ethereum",
-    "interfaceWrapHbar.claim.transaction": "View Claim Transaction",
+    "interfaceWrapHbar.hedera.transaction": "View Hedera Transaction",
     "interfaceWrapHbar.claim.metamaskConfirmation": "Waiting for MetaMask confirmation...",
     "interfaceWrapHbar.claim.notice": "Claim your <strong>{amount} {asset}</strong> on Ethereum",
     "interfaceWrapHbar.waitForClaim": "Waiting for Claim transaction to be mined...",
