Refactoring, pending transfer case
Signed-off-by: radtonev <radtonev@gmail.com>

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -294,6 +294,7 @@
     "interfaceWrapHbar.waitForClaim": "Waiting for Claim transaction to be mined...",
     "interfaceWrapHbar.waitForDeposit": "Waiting for Deposit transaction to be mined...",
     "interfaceWrapHbar.waitForConfirmations": "Waiting for Validator's confirmations...",
+    "interfaceWrapHbar.connectWallet": "Connect Wallet",
     "interfaceWrapHbar.claim": "Claim",
     "interfaceWrapHbar.summary": "Summary",
     "interfaceWrapHbar.asset": "Asset",
@@ -302,8 +303,10 @@
     "interfaceWrapHbar.hedera.fee": "Hedera network fee",
     "interfaceWrapHbar.ethereum.fee": "Ethereum network fee",
     "interfaceWrapHbar.totalToReceive": "Total to receive:",
+    "interfaceWrapHbar.pendingTransferNotice": "You have unclaimed assets on the Ethereum network!",
     "interfaceWrapToken.transferAmount": "Token Transfer Amount",
     "interfaceUnwrapWHbar.title": "Transfer to Hedera",
+    "interfacePendingTransfer.title": "Claim Assets",
     "interfaceUnWrapHbar.deposit.notice": "Deposit <strong>{amount} {asset}</strong> for transferring to Hedera",
     "interfaceUnWrapHbar.waitForBlockConfirmations": "Waiting for block confirmations...",
     "interfaceUnWrapHbar.networkReorganised": "Network has been reorganised, please check transaction from Metamask",
