--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -269,28 +269,28 @@
     "interfaceSendTransfer.transferAmount": "Transfer Amount",
     "interfaceSendTransfer.title": "Send",
     "interfaceWrapHbar.hederaNetworkFee": "Hedera Network Fee",
-    "interfaceWrapHbar.ethereumNetworkFee": "Ethereum Network Fee",
+    "interfaceWrapHbar.ethereumNetworkFee": "Polygon Network Fee",
     "interfaceWrapHbar.bridgeServiceFee": "Bridge Service Fee",
-    "interfaceWrapHbar.title": "Transfer to Ethereum",
+    "interfaceWrapHbar.title": "Transfer to Polygon",
     "interfaceUnWrapHbar.title": "Transfer to Hedera",
-    "interfaceWrapHbar.description": "From here you can send Hedera assets to Ethereum",
+    "interfaceWrapHbar.description": "From here you can send Hedera assets to Polygon",
     "interfaceUnWrapHbar.description": "From here you can send your assets back to Hedera",
     "interfaceWrapHbar.transferButton": "Transfer",
     "interfaceWrapHbar.wrapHbar": "Wrap Hbar | Wrap {count} Hbar | Wrap {count} Hbars",
-    "interfaceWrapHbar.wrapWaitEthTx": "Waiting for Ethereum Transaction Hash, do not close this window.",
+    "interfaceWrapHbar.wrapWaitEthTx": "Waiting for Polygon Transaction Hash, do not close this window.",
     "interfaceWrapHbar.assetLabel": "Asset",
-    "interfaceWrapHbar.assetInfo": "The selected asset to be transferred. Receiving address will get wrapped version of the asset on the Ethereum network.",
+    "interfaceWrapHbar.assetInfo": "The selected asset to be transferred. Receiving address will get wrapped version of the asset on the Polygon network.",
     "interfaceWrapHbar.serviceFeeInfo": "Fee charged by the Bridge operators for reliably transferring the asset between the networks.",
     "interfaceWrapHbar.hederaFeeInfo": "The network fee that will be paid for performing this operation.",
     "interfaceWrapHbar.balanceLabel": "Balance:",
     "interfaceWrapHbar.deposit": "Deposit",
     "interfaceWrapHbar.approve": "Approve",
     "interfaceWrapHbar.transaction.list.title": "Transactions",
-    "interfaceWrapHbar.ethereum.transaction": "View Ethereum Transaction",
-    "interfaceWrapHbar.deposit.notice": "Deposit <strong>{amount} {asset}</strong> for transferring to Ethereum",
+    "interfaceWrapHbar.ethereum.transaction": "View Polygon Transaction",
+    "interfaceWrapHbar.deposit.notice": "Deposit <strong>{amount} {asset}</strong> for transferring to Polygon",
     "interfaceWrapHbar.hedera.transaction": "View Hedera Transaction",
     "interfaceWrapHbar.claim.metamaskConfirmation": "Waiting for MetaMask confirmation...",
-    "interfaceWrapHbar.claim.notice": "Claim your <strong>{amount} {asset}</strong> on Ethereum",
+    "interfaceWrapHbar.claim.notice": "Claim your <strong>{amount} {asset}</strong> on Polygon",
     "interfaceWrapHbar.waitForClaim": "Waiting for Claim transaction to be mined...",
     "interfaceWrapHbar.waitForDeposit": "Waiting for Deposit transaction to be mined...",
     "interfaceWrapHbar.waitForConfirmations": "Waiting for Validator's confirmations...",
@@ -301,9 +301,9 @@
     "interfaceWrapHbar.receiver": "Receiver",
     "interfaceWrapHbar.service.fee": "Service Fee",
     "interfaceWrapHbar.hedera.fee": "Hedera network fee",
-    "interfaceWrapHbar.ethereum.fee": "Ethereum network fee",
+    "interfaceWrapHbar.ethereum.fee": "Polygon network fee",
     "interfaceWrapHbar.totalToReceive": "Total to receive:",
-    "interfaceWrapHbar.pendingTransferNotice": "You have unclaimed assets on the Ethereum network!",
+    "interfaceWrapHbar.pendingTransferNotice": "You have unclaimed assets on the Polygon network!",
     "interfaceWrapToken.transferAmount": "Token Transfer Amount",
     "interfaceUnwrapWHbar.title": "Transfer to Hedera",
     "interfacePendingTransfer.title": "Claim Assets",
@@ -338,7 +338,7 @@
     "interfaceNavigation.sendMultiple": "Send Hbar & Tokens",
     "interfaceNavigation.tools": "Tools",
     "interfaceNavigation.hederaEthereumBridge": "Bridge",
-    "interfaceNavigation.wrapHbar": "Transfer to Ethereum",
+    "interfaceNavigation.wrapHbar": "Transfer to Polygon",
     "interfaceNavigation.unwrapWHbar": "Transfer to Hedera",
     "interfaceNavigation.files": "Files",
     "interfaceNavigation.downloadFile": "Download File",
