refactor: remove unused files/props; refactor: ethereum -> evm where possible

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -158,8 +158,6 @@
     "modalSuccess.createdAccount": "Created account {0} with {1} ℏ",
     "modalSuccess.copiedFileID": "Copied File ID",
     "modalSuccess.copiedAccountID": "Copied Account ID",
-    "modalSuccess.wrapHbar": "Sending {0} WHBAR to Ethereum Address {1}",
-    "modalSuccess.unwrapHbar": "Initiated unwrap of {0} WHBAR",
     "modalRequestToCreateAccount.title": "Request to Create Account",
     "modalRequestToCreateAccount.theyMustCreateAndFundYourAccount": "They must create and fund your account, then provide you with your new account ID.",
     "modalRequestToCreateAccount.provideYourPublicKey": "Provide your public key (this QR code or the copied text) to an existing account owner on the Hedera™ network.",
@@ -189,10 +187,6 @@
     "modalFeeSummaryTitle.sendingToAccount": "Sending {0} ℏ to account {1}",
     "modalFeeSummaryTitle.downloadFile": "Downloading file: {0}",
     "modalFeeSummaryTitle.creatingAccountWithBalance": "Creating account with a balance of {0} ℏ",
-    "modalFeeSummaryTitle.wrapHbar": "Wrap {0} ℏ to {1}",
-    "modalFeeSummaryTitle.wrapToken": "Wrap {0} tokens to {1}",
-    "modalFeeSummaryTitle.approveWHbar": "Approve {0} WHBAR to Bridge {1}",
-    "modalFeeSummaryTitle.unwrapHbar": "Unwrap {0} WHBAR to account {1}",
     "modalFeeSummary.whatIsOperator": "The Hedera™ account that will pay the fees associated with this transaction",
     "modalFeeSummary.whatIsFee": "The estimated transaction fee that will be charged by the Hedera™ public network for this transaction",
     "modalFeeSummary.title": "Transaction Summary",
@@ -269,8 +263,6 @@
     "interfaceSendTransfer.transferAmount": "Transfer Amount",
     "interfaceSendTransfer.title": "Send",
     "interfaceWrapHbar.hederaNetworkFee": "Hedera Network Fee",
-    "interfaceWrapHbar.ethereumNetworkFee": "Polygon Network Fee",
-    "interfaceWrapHbar.bridgeServiceFee": "Bridge Service Fee",
     "interfaceWrapHbar.title": "Transfer to Polygon",
     "interfaceUnWrapHbar.title": "Transfer to Hedera",
     "interfaceWrapHbar.description": "From here you can send Hedera assets to Polygon",
@@ -286,7 +278,7 @@
     "interfaceWrapHbar.deposit": "Deposit",
     "interfaceWrapHbar.approve": "Approve",
     "interfaceWrapHbar.transaction.list.title": "Transactions",
-    "interfaceWrapHbar.ethereum.transaction": "View Polygon Transaction",
+    "interfaceWrapHbar.evm.transaction": "View Polygon Transaction",
     "interfaceWrapHbar.deposit.notice": "Deposit <strong>{amount} {asset}</strong> for transferring to Polygon",
     "interfaceWrapHbar.hedera.transaction": "View Hedera Transaction",
     "interfaceWrapHbar.claim.metamaskConfirmation": "Waiting for MetaMask confirmation...",
@@ -301,7 +293,6 @@
     "interfaceWrapHbar.receiver": "Receiver",
     "interfaceWrapHbar.service.fee": "Service Fee",
     "interfaceWrapHbar.hedera.fee": "Hedera network fee",
-    "interfaceWrapHbar.ethereum.fee": "Polygon network fee",
     "interfaceWrapHbar.totalToReceive": "Total to receive:",
     "interfaceWrapHbar.pendingTransferNotice": "You have unclaimed assets on the Polygon network!",
     "interfaceWrapToken.transferAmount": "Token Transfer Amount",
@@ -337,7 +328,7 @@
     "interfaceNavigation.sendToken": "Send Tokens",
     "interfaceNavigation.sendMultiple": "Send Hbar & Tokens",
     "interfaceNavigation.tools": "Tools",
-    "interfaceNavigation.hederaEthereumBridge": "Bridge",
+    "interfaceNavigation.hederaEvmBridge": "Bridge",
     "interfaceNavigation.wrapHbar": "Transfer to Polygon",
     "interfaceNavigation.unwrapWHbar": "Transfer to Hedera",
     "interfaceNavigation.files": "Files",
